Wed Aug 24 19:09:31 2005  Steve Huston  <shuston@riverace.com>

	* configure.ac: Copied in updated copyright paragraph from COPYING.

	* ace/OS_NS_Thread.cpp: Formatting fixes.

	* tests/Process_Manual_Event_Test.cpp: ACE_ERROR formatting
	  corrections (%p needs a string); code format fixes.

Wed Aug 24 17:15:28 2005  Steve Huston  <shuston@riverace.com>

	* ace/Stream_Modules.h: Added some info about ACE_Stream_Head so
	  I don't have to keep looking it up ;-)

Wed Aug 24 12:39:04 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/fuzz.pl:

          Fixed this script to work with the ACE_ENV_ARG_PARAMTER and
          ACE_ENV_SINGLE_ARG_PARAMETER macros.  This will begin to check all
          of the missing ACE_CHECK/ACE_TRY_CHECK's again.

Wed Aug 24 08:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_Base.cpp:
          Fixed possible unitialized used warning

Tue Aug 23 22:56:33 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * ace/Dev_Poll_Reactor.cpp (close):

          Removed unnecessary zeroing of underlying epoll data structure
          array.

          Deallocate epoll event data structure array and /dev/poll event
          handler file descriptor array after closing the epoll and
          /dev/poll file descriptor, respectively, to ensure consistent
          finalization of resources, to prevent potential destruction of
          event resources while waiting for events in another thread.
          It's not clear whether such a scenario will occur since a lock
          is currently held but better to be consistent.

Tue Aug 23 22:35:00 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * tests/Array_Map_Test.cpp (reference_count_test):

          Added some assertions to further verify correct ACE_Array_Map
          operation.

        * tests/Dev_Poll_Reactor_Test.cpp (handle_input):

          Fixed loop variable increment.  A for-scope variable was